--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/corona.jpg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/covid.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
 <script type="text/javascript" src="https://unpkg.com/react-vis/dist/dist.min.js"></script>
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Covid Track</title>
+    <title>CoVisualize</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
